[package]
edition      = "2024"
name         = "gonk"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "gonk"
path = "./src/bin/main.rs"

[[bin]]
name = "test-hardware"
path = "./src/bin/test_hardware.rs"

[[bin]]
name = "test-wifi"
path = "./src/bin/test_wifi.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = { version = "2.1.1", features = ["nightly"]}

esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-backtrace = { version="0.18.1", features=["esp32s3", "println"] }

embedded-graphics = "0.8.1"
epd-waveshare = "0.6.0"
embedded-hal-bus = "0.2.0"
ssd1306 = "0.9.0" 
heapless = "0.9.2"
embassy-sync = "0.7.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
